--- a/styles.css
+++ b/styles.css
@@ -282,8 +282,8 @@ body {
 /* ========== NOVO: gradient-border wrapper ========== */
 .gradient-border {
   display: block;
-  padding: 1px;                    
-  border-radius: 10px;             
+  padding: 2px;                    
+  border-radius: 20px;             
   background: transparent;         
   overflow: hidden;                
   transition: 
@@ -299,7 +299,6 @@ body {
     #B5A0A3,
     #5D4346
   );
-  transform: scale(1.05);
   box-shadow: 0 6px 25px rgba(0, 0, 0, 0.12);
 }
 
@@ -705,7 +704,54 @@ body {
 
 /* Inicio */
 /* ============================= */
-/* 1) Tablet (até 768px)         */
+/* 2) Notebooks (até 1280x800px) */
+/* ============================= */
+@media (max-width: 1280px) {
+/* header */
+.header__nav ul {
+  margin-left: -20rem; /* Ajusta o espaçamento para telas menores */
+}
+
+.hero__content{
+  margin-top: 225px;
+}
+
+/* About */
+.about__content {
+  flex-wrap: nowrap;
+}
+
+.about__text h1{
+font-size: 35px;
+}
+
+.about__text p {
+  font-size: 14px;
+}
+
+/* Defferentials  */
+
+.differentials__text h1 {
+  font-size: 35px;
+}
+.differentials__text p {
+  font-size: 14px;
+}
+
+.card h2 {
+  font-size: 18px;
+}
+
+.card p {
+  font-size: 14px;
+}
+
+.differentials__photos img {
+    width: 50%;
+}
+}
+/* ============================= */
+/* 2) Tablet (até 768px)         */
 /* ============================= */
 @media (max-width: 768px) {
   .hero__content {
@@ -888,7 +934,7 @@ body {
 
 
 /* ============================= */
-/* 2) Mobile (até 390px)         */
+/* 3) Mobile (até 390px)         */
 /* ============================= */
 @media (max-width: 390px) {
   /* 1) Ajustes gerais */
