--- a/styles.css
+++ b/styles.css
@@ -259,6 +259,13 @@ body {
   color: #FFF;
 }
 
+.btn-about:hover{
+  cursor: pointer;
+  background-color: #B5A0A3;
+  color: #5D4346;
+  font-weight: 300;
+}
+
 .about__gallery {
   display: flex;
   flex-direction: column;
@@ -440,8 +447,57 @@ body {
   background-image: url("assets/Backgrounds/ESPECIALIDADES.png");
   background-size: cover;
   text-align: center;
-  height: 100vh;
+  height: 80vh;
 }
+
+.specialties__rows{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.specialties__row__container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 40px
+}
+
+.specialties__row {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.specialties__row h2{
+  border-radius: 20px;
+  font-family:  'Poppins';
+  font-size: 20px;
+  font-weight: 300;
+  border: 1px solid #B5A0A3;
+  background-color: #5D4346;  
+  color: #fff;
+  width: 250px;
+  text-align: center;
+  padding: 5px;
+  margin-top: -20px;
+  z-index: 1;
+  transition: 0.3s  ease;
+}
+
+
+.specialties__row h2:hover{
+  cursor: pointer;
+  background-color: #B5A0A3;
+  color: #5D4346;
+  font-weight: 300;
+}
+
+
+
 
 .specialties h1{
   font-size: 52px;
@@ -459,75 +515,6 @@ body {
   margin-bottom: 40px;
 }
 
-.specialties__swiper {
-  width: 100%;
-  padding: 40px 0;
-  overflow: visible;
-}
-
-.swiper-slide {
-  background-color: transparent;
-  height: 500px;
-  border-radius: 20px;
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px;
-  transition: transform 0.3s ease, opacity 0.3s ease;
-  opacity: 0.5;
-}
-
-.swiper-slide-active {
-  transform: scale(1.1);
-  opacity: 1;
-  z-index: 2;
-}
-
-.swiper-slide img {
-  width: 85%;
-  height: 400px;
-  object-fit: cover;
-  border-radius: 10px;
-}
-
-.swiper-slide h2 {
-  margin-top: -100px;
-  font-size: 36px;
-  color: #fff;
-  font-family: 'NewYork';
-  font-weight: 400;
-  z-index: 999;
-
-}
-
-.btn-more {
-  margin-top: 15px;
-  padding: 10px 20px;
-  background-color: #5b4342;
-  color: white;
-  border-radius: 20px;
-  text-decoration: none;
-  font-family: 'Poppins';
-  font-weight: 200;
-  transition: background 0.3s;
-  display: none;
-}
-
-.swiper-slide-active .btn-more {
-  display: inline-block;
-}
-
-.btn-more:hover {
-  background-color: #7b5d5c;
-}
-
-.swiper-button-next {
-  right: 0;
-  color: #5b4342;
-  top: 50%;
-  transform: translateY(-50%);
-}
 
 
 
@@ -832,72 +819,6 @@ font-size: 35px;
   }
 
 
-/* .header__content {
-  flex-direction: row; 
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px;
-}
-
-
-.nav-toggle {
-  display: block;
-}
-.nav__toggle {
-  display: flex;
-}
-
-
-.header__nav {
-  position: absolute;
-  top: 60px;              
-  right: 0;
-  background: rgba(0, 0, 0, 0.9);
-  width: 80%;            
-  max-width: 220px;
-  transform: translateX(100vw); 
-  transition: transform 0.3s ease;
-  border-radius: 8px 0 0 8px;
-  padding: 10px 0;
-  z-index: 50;
-}
-.header__nav ul {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-  margin: 0;
-  padding: 0;
-}
-.header__nav li + li {
-  border-top: 1px solid rgba(255, 255, 255, 0.2);
-}
-.header__nav a {
-  padding: 12px 20px;
-  display: block;
-  color: #fff;
-}
-
-
-.nav-toggle:checked + .nav__toggle + .header__nav {
-  transform: translateX(0);
-}
-
-.nav-toggle:checked + .nav__toggle span {
-  background: transparent;
-}
-.nav-toggle:checked + .nav__toggle span::before {
-  transform: rotate(45deg) translate(-4px, 0px);
-}
-.nav-toggle:checked + .nav__toggle span::after {
-  transform: rotate(-45deg) translate(2px, -6px);
-}
-
-.header__contact {
-  display: none;
-} */
-
-
-
 /* Seu header e toggle continuam iguais */
 .header__content {
   display: flex;
@@ -1107,13 +1028,32 @@ font-size: 35px;
   }
 
   /* Especialidades */
+  .specialties {
+    height: unset !important;
+  }
+
   .specialties h1 {
-    font-size: 42px;
+    font-size: 38px;
     margin-bottom: 20px;
+
   }
 
   .specialties p {
-    font-size: 16px;
+    font-size: 14px;
+  }
+
+  .specialties__row__container {
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+  }
+
+  .specialties__row img {
+    width: 80%;
+  }
+
+  .specialties__row h2 {
+    font-size: 14px;
   }
 
   /* testemunhos */
@@ -1466,7 +1406,7 @@ font-size: 35px;
     height: 18px;
   }
   .footer__image img {
-    max-width: 100%;
+    max-width: 120%;
   }
   .brown-line {
     height: 20px;
