--- a/styles.css
+++ b/styles.css
@@ -217,6 +217,9 @@ body {
   background-size: cover;
 }
 
+
+
+
 .about__content {
   display: flex;
   flex-wrap: wrap;
@@ -262,7 +265,7 @@ body {
 .btn-about:hover{
   cursor: pointer;
   background-color: #B5A0A3;
-  color: #5D4346;
+  color: #FFF;
   font-weight: 300;
 }
 
@@ -936,12 +939,18 @@ font-size: 35px;
   .about {
     padding: 80px 0;
   }
+
+  .container.about__content{
+  margin: 0 15px;
+  }
+
+
   .about__content {
     flex-direction: column;
     gap: 30px;
   }
   .about__text h1 {
-    font-size: 38px;
+    font-size: 35px;
     line-height: 1.1;
     text-align: center;
   }
@@ -954,7 +963,7 @@ font-size: 35px;
   }
 
   .about__text p {
-    font-size: 18px;
+    font-size: 17px;
     text-align: center;
   }
   .btn-about {
