--- a/styles.css
+++ b/styles.css
@@ -120,7 +120,6 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.4); /* Camada escura opcional */
 }
 
 .hero__content {
@@ -138,7 +137,6 @@ body {
   font-family: 'NewYork';
   font-weight: 400;
   line-height: 1;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .hero__content p {
@@ -332,15 +330,6 @@ body {
 
 
 .gradient-border:hover {
-  box-shadow: 0 6px 25px rgba(0, 0, 0, 0.12);
-  transition: box-shadow 0.9s ease;
-}
-
-
-
-
-
-.gradient-border-mobile:hover {
   box-shadow: 0 6px 25px rgba(0, 0, 0, 0.12);
   transition: box-shadow 0.9s ease;
 }
@@ -732,7 +721,9 @@ body {
   height: 30px;
 }
 
-
+.gradient-border-mobile {
+  display: none;
+}
 
 /* Media query*/
 
